[package]
name = "egui_pocketbook"
version = "0.1.0"
edition = "2018"
license = "MIT"
keywords = ["eink", "inkview", "pocketbook", "egui"]


exclude = [
    ".idea/*",
]
description = "Egui backend for pocketbook eink reader"
repository = "https://github.com/asimaranov/egui_pocketbook"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkview-sys = "0.1.1"
egui = "*"
epi = "*"


[lib]
name = "egui_pocketbook"
path = "src/lib.rs"
